# FVM-Aerodynamic-Simulator

./: .gitignore  CMakeLists.txt  README.md  verify_config.ps1
HISTORY/include/: solver.cuh
docs/: 关于波动问题.md  关于波动问题（理解1）.md  数据流整理.md  求解器实现日志.md  项目物理原理规划.md
scripts/: package_release.ps1
src/: main.cpp  renderer.cpp  solver.cu
src/include/: common.h  renderer.h  solver.cuh
